working server using express.js, requests for quotes and add new

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,11 @@
             <button id="fetch-by-author">Fetch by Author</button>
         </div>
     </div>
-    <div id="quote-container">
+    <div class="background">
+        <div id="quote-container">
     
+        </div>
+
     </div>
     <script src="script.js"></script>
 </body>
