Working API express only backend, no SQL db

--- a/public/new-quote.html
+++ b/public/new-quote.html
@@ -5,6 +5,7 @@
   <title>Quote API</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1>Fly Fishing Quotes API</h1>
